Fix Base64 availability issue by using sun.misc.BASE64Encoder